# cs2-internal-old

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
client/: CMakeLists.txt  game.cpp  game.hpp  global.hpp  hooks.cpp  hooks.hpp  main.cpp  menu.cpp  menu.hpp  utils.cpp  utils.hpp
client/cs2/: convar.cpp  convar.hpp  convar.lst  cutl.cpp  cutl.hpp  entity.cpp  entity.hpp  fcvar_defs.lst  inputservice.cpp  inputservice.hpp  interface.cpp  interface.hpp  structs.hpp  vecang.cpp  vecang.hpp
client/menu/: menu.cpp  menu.hpp  tabs.hpp
client/menu/tabs/: debug.cpp  debug.hpp
client/mlists/: concoms.lst  convars.lst  intf.lst  patterns.lst  so.lst
common/: CMakeLists.txt
common/include/common/: logging.hpp  mem.hpp  pattern_scanner.hpp  types.hpp  utils.hpp
common/src/: logging.cpp  mem.cpp  pattern_scanner.cpp  utils.cpp
loader/: CMakeLists.txt  main.cpp
